--- a/ProyectoFinal.cbp
+++ b/ProyectoFinal.cbp
@@ -14,6 +14,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -24,6 +25,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -42,7 +44,19 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Program Files/CodeBlocks/MinGW/x86_64-w64-mingw32/lib" />
 		</Linker>
+		<Unit filename="include/Agente.h" />
+		<Unit filename="include/Cara.h" />
+		<Unit filename="include/Collision.h" />
+		<Unit filename="include/Escenario.h" />
+		<Unit filename="include/Player.h" />
+		<Unit filename="include/RgbImage.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Agente.cpp" />
+		<Unit filename="src/Cara.cpp" />
+		<Unit filename="src/Collision.cpp" />
+		<Unit filename="src/Escenario.cpp" />
+		<Unit filename="src/Player.cpp" />
+		<Unit filename="src/RgbImage.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
