--- a/ProyectoFinal.cbp
+++ b/ProyectoFinal.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/ProyectoFinal" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="C:/Program Files/CodeBlocks/MinGW/x86_64-w64-mingw32/bin" />
+				<Option working_dir=".a" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -44,12 +44,15 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Program Files/CodeBlocks/MinGW/x86_64-w64-mingw32/lib" />
 		</Linker>
+		<Unit filename="SNES.bmp" />
+		<Unit filename="SNESSIDES.bmp" />
 		<Unit filename="include/Agente.h" />
 		<Unit filename="include/Cara.h" />
 		<Unit filename="include/Collision.h" />
 		<Unit filename="include/Escenario.h" />
 		<Unit filename="include/Player.h" />
 		<Unit filename="include/RgbImage.h" />
+		<Unit filename="include/Walls.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Agente.cpp" />
 		<Unit filename="src/Cara.cpp" />
@@ -57,6 +60,7 @@
 		<Unit filename="src/Escenario.cpp" />
 		<Unit filename="src/Player.cpp" />
 		<Unit filename="src/RgbImage.cpp" />
+		<Unit filename="src/Walls.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
