--- a/ProyectoFinal.cbp
+++ b/ProyectoFinal.cbp
@@ -61,6 +61,7 @@
 		<Unit filename="src/Player.cpp" />
 		<Unit filename="src/RgbImage.cpp" />
 		<Unit filename="src/Walls.cpp" />
+		<Unit filename="textura4.bmp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
